--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^8.0.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "apple-signin-auth": "^1.7.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
